Removed a Demo Page

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,4 @@ MyListAnalyzerDash.egg-info
 *.pyc
 MyListAnalyzerDash/assets/*
 Raw/*
-!/MyListAnalyzerDash/pages/demo_page.py
+MyListAnalyzerDash/pages/test_*
