--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 dash==2.8.1
 dash_mantine_components==0.11.1
 requests==2.28.2
-Flask==2.2.2
+Flask==2.2.3
 plotly==5.13.0
-Werkzeug~=2.2.2
+Werkzeug==2.2.3
